[gd_scene load_steps=23 format=2]

[ext_resource path="res://assets/felpudo/felpudoVoa5.png" type="Texture" id=1]
[ext_resource path="res://assets/felpudo/felpudoVoa4.png" type="Texture" id=2]
[ext_resource path="res://assets/felpudo/felpudoVoa6.png" type="Texture" id=3]
[ext_resource path="res://assets/felpudo/felpudoVoa1.png" type="Texture" id=4]
[ext_resource path="res://assets/felpudo/felpudoVoa2.png" type="Texture" id=5]
[ext_resource path="res://assets/felpudo/felpudoVoa3.png" type="Texture" id=6]
[ext_resource path="res://assets/felpudo/scripts/Felpudo.gd" type="Script" id=7]
[ext_resource path="res://scenes/BackAnim.tscn" type="PackedScene" id=8]
[ext_resource path="res://scenes/Cano.tscn" type="PackedScene" id=9]
[ext_resource path="res://Script/gerador.gd" type="Script" id=10]
[ext_resource path="res://Script/Game.gd" type="Script" id=11]
[ext_resource path="res://assets/font.ttf" type="DynamicFontData" id=12]
[ext_resource path="res://sound/somScore.ogg" type="AudioStream" id=13]
[ext_resource path="res://sound/somHit.ogg" type="AudioStream" id=14]
[ext_resource path="res://sound/somVoa.ogg" type="AudioStream" id=15]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 4 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 6 ), ExtResource( 2 ), ExtResource( 1 ), ExtResource( 3 ) ],
"loop": true,
"name": "default",
"speed": 8.0
} ]

[sub_resource type="CircleShape2D" id=2]
radius = 73.7726

[sub_resource type="Animation" id=3]
tracks/0/type = "value"
tracks/0/path = NodePath("FelpudoAnim:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 0.0, -60.0, 0.0 ]
}

[sub_resource type="Animation" id=4]
length = 1.5
tracks/0/type = "value"
tracks/0/path = NodePath("FelpudoAnim:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 90.0 ]
}

[sub_resource type="SegmentShape2D" id=5]
b = Vector2( 1000.1, -0.0361948 )

[sub_resource type="SegmentShape2D" id=6]
a = Vector2( -21.6811, 2.23804 )
b = Vector2( 977.401, 2.54297 )

[sub_resource type="DynamicFont" id=7]
size = 160
outline_color = Color( 0.0941176, 0.0862745, 0.0862745, 1 )
font_data = ExtResource( 12 )

[node name="GameNode" type="Node2D"]
script = ExtResource( 11 )

[node name="BackAnim" parent="." instance=ExtResource( 8 )]

[node name="Felpudo" type="RigidBody2D" parent="."]
position = Vector2( 161.073, 732.968 )
z_index = 1
collision_mask = 0
mode = 2
gravity_scale = 18.0
script = ExtResource( 7 )

[node name="FelpudoAnim" type="AnimatedSprite" parent="Felpudo"]
position = Vector2( -4.26074, 4.53314 )
scale = Vector2( 1.4, 1.4 )
frames = SubResource( 1 )
frame = 2
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Felpudo"]
position = Vector2( 37.6929, 11.4016 )
shape = SubResource( 2 )

[node name="AnimRotate" type="AnimationPlayer" parent="Felpudo"]
anims/idle = SubResource( 3 )
anims/rotate = SubResource( 4 )

[node name="AuxAnim" type="Timer" parent="Felpudo"]
wait_time = 0.2

[node name="SomVoa" type="AudioStreamPlayer2D" parent="Felpudo"]
stream = ExtResource( 15 )
bus = "teste"

[node name="Limites" type="StaticBody2D" parent="."]
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Limites"]
shape = SubResource( 5 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Limites"]
position = Vector2( 22.2234, 1697.78 )
shape = SubResource( 6 )

[node name="Canos" type="Node2D" parent="."]

[node name="Cano" parent="Canos" instance=ExtResource( 9 )]
position = Vector2( 1284.35, 766.398 )
z_index = 1

[node name="Gerador" type="Position2D" parent="Canos"]
position = Vector2( 1273.29, 809.083 )
script = ExtResource( 10 )

[node name="Timer" type="Timer" parent="Canos/Gerador"]
wait_time = 3.0
autostart = true

[node name="TimerToReplay" type="Timer" parent="."]
wait_time = 2.0

[node name="Node2D" type="Node2D" parent="."]
z_index = 3

[node name="Control" type="Control" parent="Node2D"]
margin_left = 376.0
margin_top = 69.0
margin_right = 718.0
margin_bottom = 210.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Node2D/Control"]
margin_left = -384.0
margin_right = 618.0
margin_bottom = 193.0
custom_fonts/font = SubResource( 7 )
text = "0"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SomScore" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 13 )

[node name="SomHit" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 14 )
[connection signal="timeout" from="Felpudo/AuxAnim" to="Felpudo" method="_on_AuxAnim_timeout"]
[connection signal="timeout" from="Canos/Gerador/Timer" to="Canos/Gerador" method="_on_Timer_timeout"]
[connection signal="timeout" from="TimerToReplay" to="." method="_on_TimerToReplay_timeout"]
